update and added folder for scripts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     </head>
     <body>
-    <script src="stockprice_bars.js"></script>
+    <script src="p5s/AL_moire_01.js"></script>
     
 </body>
 </html>
